src/test/data/tests/const/invalid/wrong_const_placement.c
int main(void) {
    // This is valid C, but we don't support it.
    int const a;
    return 0;
}
